Finished base infrastucture for optimization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required (VERSION 2.6)
 project (IOPlacement)
 
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_FLAGS "-Wall -Werror")
+
 find_package(Boost COMPONENTS system filesystem program_options REQUIRED)
 
 file(GLOB_RECURSE SRC_FILES src/*.cpp)
