--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,5 @@ file(GLOB_RECURSE SRC_FILES src/*.cpp)
 
 add_executable(ioPlacement ${SRC_FILES})
 target_include_directories(ioPlacement PUBLIC ${Boost_INCLUDE_DIR})
+target_include_directories(ioPlacement PUBLIC ./)
 target_link_libraries(ioPlacement ${Boost_LIBRARIES})
