Using DEF parser to read and process input files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,14 @@ find_package(Boost COMPONENTS system filesystem program_options REQUIRED)
 
 file(GLOB_RECURSE SRC_FILES src/*.cpp)
 
+link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib/linux)
+
 add_executable(ioPlacement ${SRC_FILES})
+
 target_include_directories(ioPlacement PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(ioPlacement PUBLIC 3rdparty)
+target_include_directories(ioPlacement PUBLIC "./include/def")
+target_include_directories(ioPlacement PUBLIC "./include/lef")
+
+target_link_libraries(ioPlacement def lef)
 target_link_libraries(ioPlacement ${Boost_LIBRARIES})
