Remove Standalone dependencies from CMake if generating lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project (ioPlacement)
 set(BIN_NAME "ioPlacement")
 set(LIB_NAME "ioPlace")
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "-Wall -Werror -O3 -fopenmp")
 
 link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib)
@@ -18,6 +18,11 @@ set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
 if(DEFINED ENV{TYPE_CALL})
         message("-- Will generate lib")
+
+        list(REMOVE_ITEM SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/Main.cpp)
+        list(REMOVE_ITEM SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/DEFParser.cpp)
+
+        add_definitions(-DLIBRARY_MODE)
         add_LIBRARY(${LIB_NAME} STATIC ${SRC_FILES})
 
         target_include_directories(${LIB_NAME} PUBLIC ${Boost_INCLUDE_DIR})
@@ -30,6 +35,8 @@ if(DEFINED ENV{TYPE_CALL})
         target_link_libraries(${LIB_NAME} ${Boost_LIBRARIES})
 else()
         message("-- Will generate binary")
+
+        add_definitions(-DSTANDALONE_MODE)
         add_executable(${BIN_NAME} ${SRC_FILES})
 
         target_include_directories(${BIN_NAME} PUBLIC ${Boost_INCLUDE_DIR})
