--- a/jenkins/Dockerfile.dev
+++ b/jenkins/Dockerfile.dev
@@ -22,4 +22,4 @@ RUN wget https://cmake.org/files/v3.9/cmake-3.9.0-Linux-x86_64.sh && \
     chmod +x cmake-3.9.0-Linux-x86_64.sh  && \
     ./cmake-3.9.0-Linux-x86_64.sh --skip-license --prefix=/usr/local
 
-RUN yum install -y zlib-devel
+RUN yum install -y zlib-devel tcl tcl-devel bc
